--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@js-utils/core",
+  "name": "@s.age/js-utils",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Stefan Age",
