--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "author": "Stefan Age",
   "homepage": "https://github.com/sage911/js-utils",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "lodash.get": "^4.4.2"
+  }
 }
